--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div class="main-container">
-		<img id="image" src="https://www.etsy.com/in-en/listing/519967339/thank-you-greeting-card-a2-425x55-cute?click_key=a22a19301950479ec728ade1b4147dca51fa4577%3A519967339&click_sum=94615e74&external=1&rec_type=cs&ref=landingpage_similar_listing_top-5" alt="image">
+		<img id="image" src="https://oshiprint.in/image/product_t/117/thumb-3368.jpg" alt="image">
 		<h1 class="card">
 			Pricing Card
 		</h1>
-		<p class="para">Price:Rs.500</p>
+		<p class="para">Price: Rs.500</p>
 		<p class="par">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		<button type="button" class="buynow">Buy Now</button>
 	</div>
